feat: get data from database for the API getClasses Jira: KLVN-627
refactor: use tableA

refactor: re-handle average_performance
