# src/models/class.ts
@@ -1,7 +1,0 @@
-import { Performance } from './performance';
-
-export interface Class {
-  class_id: string;
-  class_name: string;
-  performance: Performance;
-}
